# wow-file-tools

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: byte_utils.rs  common.rs  main.rs  mpq_tool.rs  resolve_map_assets.rs  resolve_map_assets_v2.rs  view_command.rs
src/command_handler/: dbc_join.rs  mod.rs  mpq.rs  proxy.rs  resolve_map_assets.rs  view.rs
src/formats/: adt.rs  chunk.rs  m2.rs  mdx.rs  mod.rs  wdl.rs  wdt.rs  wmo.rs
src/formats/dbc/: area_table.rs  battle_master_list.rs  dbc.rs  game_object_display_info.rs  ground_effect_doodad.rs  ground_effect_texture.rs  light.rs  light_params.rs  light_sky_box.rs  loading_screens.rs  map.rs  mod.rs  pvp_difficulty.rs  spell.rs  spell_category.rs  spell_icon.rs  spell_visual.rs  spell_visual_effect_name.rs  spell_visual_kit.rs  talent.rs  talent_tab.rs
src/formats/dbc/join/: mod.rs  spell.rs  talents.rs  utils.rs
src/mpq/: mod.rs  mpq_path.rs
src/proxy/: client.rs  connection.rs  mod.rs  server.rs
stormlib/: Cargo.toml  build.rs
stormlib/src/: bindings.rs  lib.rs
updater-app/: .gitignore  Cargo.toml  build.rs  embed_resources.exe.manifest  embed_resources.rc
updater-app/src/: api.rs  logic.rs  main.rs  mpq_writer_thread.rs
