[package]
name = "wow-file-tools"
version = "0.1.0"
authors = ["ArenaCraft arenacraftwow@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { git = "https://github.com/clap-rs/clap/" }
walkdir = "2"