[package]
name = "wow-file-tools"
version = "0.1.0"
authors = ["ArenaCraft arenacraftwow@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
walkdir = "2"
stormlib= { path= "./stormlib" }
erased-serde = "0.3"